Bug 378105. Update default fonts for Indic scripts. r=pavlov, ui-review+approval1.9=beltzner